# src/notification/dto/unregister-token.dto.ts
@@ -1,0 +1,12 @@
+import { IsString, IsNotEmpty } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class UnregisterTokenDto {
+  @ApiProperty({
+    description: '기기 식별자',
+    example: 'device_identifier',
+  })
+  @IsString()
+  @IsNotEmpty()
+  deviceId: string;
+} 
